--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,11 +19,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
+  shared_preferences: ^0.5.7+3
+
   flutter_localizations:
     sdk: flutter
-  flutter_bloc: ^2.1.1
-  equatable: ^1.0.1
+  flutter_bloc: ^4.0.0
+  equatable: ^1.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -33,13 +34,11 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -47,15 +46,12 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - lang/en.json
-   - lang/my.json
-
+    - lang/en.json
+    - lang/my.json
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
