--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,9 +22,9 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   cupertino_icons: ^0.1.3
-  equatable: ^1.2.5
-  flutter_bloc: ^6.1.0
-  shared_preferences: ^0.5.12+2
+  equatable: ^2.0.0
+  flutter_bloc: ^7.0.0
+  shared_preferences: ^2.0.5
 
 dev_dependencies:
   flutter_test:
