--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,14 +17,15 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  cupertino_icons: ^0.1.3
+  equatable: ^2.0.3
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.0.0
   flutter_localizations:
     sdk: flutter
-  cupertino_icons: ^0.1.3
-  equatable: ^2.0.0
-  flutter_bloc: ^7.0.0
-  shared_preferences: ^2.0.5
+  shared_preferences: ^2.0.11
+  shared_preferences_web: ^2.0.2
 
 dev_dependencies:
   flutter_test:
