--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,17 +14,18 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: '>=2.19.0 <3.0.0'
 
 dependencies:
-  cupertino_icons: ^0.1.3
-  equatable: ^2.0.3
+  configcat_preferences_cache: ^1.0.0
+  cupertino_icons: ^1.0.5
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.0.0
+  flutter_bloc: ^8.1.2
   flutter_localizations:
     sdk: flutter
-  shared_preferences: ^2.0.11
+  shared_preferences: ^2.1.0
   shared_preferences_web: ^2.0.2
 
 dev_dependencies:
