--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,21 +14,23 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.0 <3.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
-  configcat_preferences_cache: ^1.0.0
   cupertino_icons: ^1.0.5
   equatable: ^2.0.5
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.1.2
+  flutter_web_plugins:
+    sdk: flutter
+  flutter_bloc: ^8.1.3
   flutter_localizations:
     sdk: flutter
-  shared_preferences: ^2.1.0
-  shared_preferences_web: ^2.0.2
+  shared_preferences: ^2.2.0
+  shared_preferences_web: ^2.2.0
 
 dev_dependencies:
+  flutter_lints: ^2.0.2
   flutter_test:
     sdk: flutter
 
